--- a/styles/main.css
+++ b/styles/main.css
@@ -4,9 +4,9 @@ html, body, h1, h2, h3, p, ul, ol, li {
     font-family: Arial, sans-serif;}
 
 body {
-    font-size: 16px;
+    font-size: 20px;
     line-height: 1.6;
-    color: #333; 
+    color: #2f2b2b; 
     background-color: #fff; 
 }
 .header {
@@ -15,7 +15,7 @@ body {
     text-align: center;
 }
 .navbar {
-    background-color: #333;
+    background-color: #2f2d2d;
     padding: 10px 0;
 }
 
