--- a/styles/main.css
+++ b/styles/main.css
@@ -15,7 +15,7 @@ body {
     text-align: center;
 }
 .navbar {
-    background-color: #2f2d2d;
+    background-color: #333;
     padding: 10px 0;
 }
 
