--- a/styles/main.css
+++ b/styles/main.css
@@ -4,6 +4,7 @@ html, body, h1, h2, h3, p, ul, ol, li {
     font-family: Arial, sans-serif;}
 
 body {
+    text-align: center;
     font-size: 20px;
     line-height: 1.6;
     color: #2f2b2b; 
