--- a/styles/main.css
+++ b/styles/main.css
@@ -8,15 +8,15 @@ body {
     font-size: 20px;
     line-height: 1.6;
     color: #2f2b2b; 
-    background-color: #fff; 
+    background-color: #664141; 
 }
 .header {
-    background-color: #f0f0f0;
+    background-color: #b7d9db;
     padding: 20px;
     text-align: center;
 }
 .navbar {
-    background-color: #333;
+    background-color: #056400;
     padding: 10px 0;
 }
 
@@ -29,13 +29,13 @@ body {
     display: inline-block;
 }
 .navbar ul li a:hover {
-    background-color: #555;
+    background-color: #c11f1f;
 }
 .main-content {
     margin-top: 20px;
 }
 .footer {
-    background-color: #f0f0f0;
+    background-color: #b7d9db;
     padding: 20px;
     text-align: center;
 }
