--- a/styles/main.css
+++ b/styles/main.css
@@ -1,46 +1,11 @@
-html, body, h1, h2, h3, p, ul, ol, li {
-    margin: 0;
-    padding: 0;
-    font-family: Arial, sans-serif;}
-
 body {
-    text-align: center;
+    background-color: darkgrey;
     font-size: 20px;
-    line-height: 1.6;
-    color: #2f2b2b; 
-    background-color: #664141; 
-}
-.header {
-    background-color: #b7d9db;
-    padding: 20px;
-    text-align: center;
-}
-.navbar {
-    background-color: #056400;
-    padding: 10px 0;
-}
+    color:floralwhite
 
-.navbar ul {
-    list-style: none;
-    text-align: center;
 }
-
-.navbar ul li {
-    display: inline-block;
-}
-.navbar ul li a:hover {
-    background-color: #c11f1f;
-}
-.main-content {
-    margin-top: 20px;
-}
-.footer {
-    background-color: #b7d9db;
-    padding: 20px;
-    text-align: center;
-}
-@media (max-width: 768px) {
-    .container {
-        width: 90%;
-    }
+h1 {
+    font-style: Apple Chancery, cursive;
+    font-size: 40px;
+    font-weight: bold;
 }
