--- a/styles/main.css
+++ b/styles/main.css
@@ -2,10 +2,22 @@ body {
     background-color: darkgrey;
     font-size: 20px;
     color:rgb(17, 12, 3); 
+    text-align: center;
+    font-style: oblique;
+    font-family: cursive;
 
 }
 h1 {
-    font-style: Apple Chancery, cursive;
+    margin-bottom: 200px;
+    font-style:italic;
     font-size: 40px;
     font-weight: bold;
+    background-color: indigo;
+}
+p{
+    margin-top: 40px;
+    margin-bottom: 40px;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 500px;
 }
