--- a/styles/main.css
+++ b/styles/main.css
@@ -8,7 +8,7 @@ body {
 
 }
 h1 {
-    margin-bottom: 200px;
+    margin-bottom: 100px;
     font-style:italic;
     font-size: 40px;
     font-weight: bold;
@@ -20,4 +20,7 @@ p{
     margin-left: auto;
     margin-right: auto;
     max-width: 500px;
+}
+h2 {
+    font-size: 30px;
 }
