--- a/styles/main.css
+++ b/styles/main.css
@@ -29,6 +29,10 @@ nav {
     color: cadetblue;
 }
 .img {
-    max-width: 50%;
-    max-width: 50%;
+    max-width: fit-content;
+    max-width: fit-content;
+}
+.picture1 {
+    max-width: fit-content;
+    max-height: fit-content;
 }
