--- a/styles/main.css
+++ b/styles/main.css
@@ -9,7 +9,7 @@ body {
 
 }
 h1 {
-    margin-bottom: 100px;
+    margin-bottom: 20px;
     font-style:italic;
     font-size: 40px;
     font-weight: bold;
@@ -27,12 +27,18 @@ h3 {
 }
 nav {
     color: cadetblue;
+    width: auto;
+    height: auto;
+    border-color: rgb(13, 13, 13);
+    border-width: 10px;
+    background-color: cornsilk;
+
 }
 .img {
     max-width: fit-content;
     max-width: fit-content;
 }
 .picture1 {
-    max-width: fit-content;
-    max-height: fit-content;
+    max-width: 1000px;
+    max-height: 400px;
 }
