--- a/styles/main.css
+++ b/styles/main.css
@@ -9,6 +9,7 @@ body {
 
 }
 h1 {
+    background-color: rgb(240, 212, 185);
     margin-bottom: 20px;
     font-style:italic;
     font-size: 40px;
@@ -16,6 +17,7 @@ h1 {
     background-color: rgb(121, 186, 236);
 }
 p{
+    background-color: rgb(240, 212, 185);
     margin-top: 40px;
     margin-bottom: 40px;
     margin-left: auto;
@@ -23,6 +25,7 @@ p{
     max-width: 500px;
 }
 h3 {
+    background-color: rgb(240, 212, 185);
     font-size: 30px;
 }
 nav {
